# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # # On branch master # Your branch is up to date with 'origin/master'. # # Changes to be committed: #	modified:   react/package-lock.json #	modified:   react/package.json #	modified:   react/src/App.css #	modified:   react/src/components/frontend/Dashoard.js #	modified:   react/src/components/frontend/services/Airtime.js #	modified:   react/src/components/frontend/services/Bill.js #	modified:   react/src/components/frontend/services/Data.js #	modified:   react/src/components/frontend/services/Electricity.js #

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -100,7 +100,7 @@ body, .my-bg-light {
     background-color: #f3e8ff !important;
 }
 
-.btn-outline-primary {
+.btn-outline-primary, .border-primary {
     border-color: #2d0856 !important;
     color: #2d0856 !important;
 }
