--- a/react/src/App.css
+++ b/react/src/App.css
@@ -88,7 +88,7 @@ body, .my-bg-light {
     color: #2d0856 !important;
 }
 
-.bg-primary, .my-bg-primary {
+.bg-primary, .my-bg-primary, .active {
     background-color: #2d0856 !important;
 }
 
