--- a/react/src/App.css
+++ b/react/src/App.css
@@ -124,3 +124,45 @@ body, .my-bg-light {
     background: transparent;
     padding: 0px;
 }
+
+/* Hide the default checkbox */
+input[type="checkbox"] {
+    display: none;
+  }
+  
+  /* Style the label to resemble a small switch */
+  input[type="checkbox"] + label {
+    display: inline-block;
+    width: 30px;
+    height: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+    background-color: #ccc;
+    border-radius: 8px;
+    position: relative;
+    cursor: pointer;
+  }
+  
+  /* Style the switch indicator */
+  input[type="checkbox"] + label:before {
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: white;
+    top: 1px;
+    left: 1px;
+    transition: 0.3s;
+  }
+  
+  /* Change the background color when the switch is checked */
+  input[type="checkbox"]:checked + label {
+    background-color: #2196F3;
+  }
+  
+  /* Move the switch indicator to the right when the switch is checked */
+  input[type="checkbox"]:checked + label:before {
+    transform: translateX(15px);
+  }
+  
