--- a/frontend/src/assets/admin/css/styles.css
+++ b/frontend/src/assets/admin/css/styles.css
@@ -6542,7 +6542,7 @@ textarea.form-control-lg {
   top: 0;
   right: 0;
   left: 0;
-  z-index: 1030;
+  z-index: 1;
 }
 
 .fixed-bottom {
@@ -11383,7 +11383,7 @@ body {
 .sb-nav-fixed #layoutSidenav #layoutSidenav_nav {
   width: 225px;
   height: 100vh;
-  z-index: 1038;
+  /* z-index: 1038; */
 }
 .sb-nav-fixed #layoutSidenav #layoutSidenav_nav .sb-sidenav {
   padding-top: 56px;
