--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -137,6 +137,7 @@ input[type="checkbox"] {
     height: 15px;
     margin-left: 5px;
     margin-right: 5px;
+    margin-top: 4px;
     background-color: #ccc;
     border-radius: 8px;
     position: relative;
@@ -158,7 +159,7 @@ input[type="checkbox"] {
   
   /* Change the background color when the switch is checked */
   input[type="checkbox"]:checked + label {
-    background-color: #2196F3;
+    background-color: #2D0856;
   }
   
   /* Move the switch indicator to the right when the switch is checked */
