--- a/frontend/src/assets/admin/css/styles.css
+++ b/frontend/src/assets/admin/css/styles.css
@@ -33,7 +33,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #0d6efd;
+  --bs-primary: #2D0856;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -472,6 +472,7 @@ output {
 
 iframe {
   border: 0;
+  display: none;
 }
 
 summary {
